force-app/main/default/objects/Approval_Process_Step_Task__c/Approval_Process_Step_Task__c.object-meta.xml
<CustomObject>
    <label>AP_Approval Process Step Task</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Approval Process Step Task Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AP_Approval Process Step Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>