force-app/main/default/objects/Approval_Process_Step_Task__c/fields/Approval_Process_Step_Instance__c.field-meta.xml
<CustomField>
    <fullName>Approval_Process_Step_Instance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approval Process Step Instance</label>
    <referenceTo>ApprovalProcessStepInstance__c</referenceTo>
    <relationshipLabel>Approval Process Step Tasks</relationshipLabel>
    <relationshipName>Approval_Process_Step_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>