force-app/main/default/objects/Approval_Process_Step_Task__c/fields/Assigned_User__c.field-meta.xml
<CustomField>
    <fullName>Assigned_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approval_Process_Step_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>