force-app/main/default/objects/Approval_Process_Step_Task__c/fields/Original_Assignee__c.field-meta.xml
<CustomField>
    <fullName>Original_Assignee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Assignee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approval_Process_Step_Tasks1</relationshipName>
    <type>Lookup</type>
</CustomField>