force-app/main/default/objects/Approval_Process_Step_Task__c/fields/Parent_Approval_Process_Instance__c.field-meta.xml
<CustomField>
    <fullName>Parent_Approval_Process_Instance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Approval Process Instance</label>
    <referenceTo>ApprovalProcessInstance__c</referenceTo>
    <relationshipName>Approval_Process_Step_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>